chore: Updating deps, adding package-yaml

--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
   "license": "MIT",
   "dependencies": {
     "clamp": "^1.0.1",
-    "classnames": "^2.2.3",
+    "classnames": "^2.2.6",
     "lodash.isequal": "^4.4.0",
-    "prop-types": "^15.5.0"
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "add-stream": "^1.0.0",
     "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.2.5",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
@@ -59,7 +59,7 @@
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
-    "conventional-changelog": "^1.1.0",
+    "conventional-changelog": "^1.1.24",
     "cross-env": "^4.0.0",
     "enzyme": "^2.4.1",
     "eslint": "^2.7.0",
@@ -70,27 +70,28 @@
     "expect": "^1.16.0",
     "gatsby": "^0.12.43",
     "gh-pages": "^0.12.0",
-    "isparta": "^4.0.0",
+    "isparta": "^4.1.1",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-cli": "^1.0.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.1.0",
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
+    "package-yaml": "^1.0.0",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-router": "^2.6.1",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.7.1",
     "sinon": "^2.1.0",
-    "standard-version": "^4.0.0",
+    "standard-version": "^4.4.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
   },
