--- a/package.json
+++ b/package.json
@@ -58,10 +58,11 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.6.1",
+    "chai-enzyme": "^1.0.0-beta.1",
     "conventional-changelog": "^1.1.24",
     "cross-env": "^4.0.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.13.0",
@@ -85,10 +86,10 @@
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
     "package-yaml": "^1.0.0",
-    "react": "^15.6.2",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-router": "^2.6.1",
+    "react-test-renderer": "^16.10.2",
     "rimraf": "^2.7.1",
     "sinon": "^2.1.0",
     "standard-version": "^4.4.0",
@@ -96,19 +97,16 @@
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "0.14.x || ^15.0.0-rc",
-    "react-dom": "0.14.x || ^15.0.0-rc"
+    "react": "^16.4",
+    "react-dom": "^16.4"
   },
   "scripts": {
     "clean": "rimraf coverage lib out",
-    "react:clean": "rimraf node_modules/react node_modules/react-dom node_modules/react-addons-test-utils",
-    "react:14": "npm run react:clean && npm i react@0.14 react-dom@0.14 react-addons-test-utils@0.14",
-    "react:15": "npm run react:clean && npm i react@15 react-dom@15 react-addons-test-utils@15",
-    "test:react:14": "npm run react:14 && npm run test:suite",
-    "test:react:15": "npm run react:15 && npm run test:suite",
+    "react:16": "true",
+    "test:react:16": "npm run react:16 && npm run test:suite",
     "test:suite": "karma start --single-run",
     "pretest": "npm run lint",
-    "test": "npm run test:react:14 && npm run test:react:15",
+    "test": "npm run test:react:16",
     "test:watch": "karma start --auto-watch",
     "lint": "eslint src scripts",
     "compile": "rimraf lib && babel src --ignore __tests__ --out-dir lib",
