--- a/package.yaml
+++ b/package.yaml
@@ -1,9 +1,9 @@
-name: "@dmchurch/react-mdl"
-version: 1.11.0
+name: react-mdl
+version: 2.0.1
 description: React Components for Material Design Lite
 main: lib/index.js
 jsnext:main: src/index.js
-repository: dmchurch/react-mdl
+repository: react-mdl/react-mdl
 keywords:
   - react
   - react-component
